--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,34 +1,78 @@
-ame: Tests
+name: 'Attest Build Provenance'
+description: 'Generate provenance attestations for build artifacts'
+author: 'GitHub'
+branding:
+  color: 'blue'
+  icon: 'lock'
 
-on:
-  push:
-    branches:
-      - '**'
-    tags:
-      - '**'
+inputs:
+  subject-path:
+    description: >
+      Path to the artifact serving as the subject of the attestation. Must
+      specify exactly one of "subject-path", "subject-digest", or
+      "subject-checksums". May contain a glob pattern or list of paths
+      (total subject count cannot exceed 1024).
+    required: false
+  subject-digest:
+    description: >
+      Digest of the subject for which provenance will be generated. Must be in
+      the form "algorithm:hex_digest" (e.g. "sha256:abc123..."). Must specify
+      exactly one of "subject-path", "subject-digest", or "subject-checksums".
+    required: false
+  subject-name:
+    description: >
+      Subject name as it should appear in the attestation. Required when
+      identifying the subject with the "subject-digest" input.
+  subject-checksums:
+    description: >
+      Path to checksums file containing digest and name of subjects for
+      attestation. Must specify exactly one of "subject-path", "subject-digest",
+      or "subject-checksums".
+    required: false
+  push-to-registry:
+    description: >
+      Whether to push the provenance statement to the image registry. Requires
+      that the "subject-name" parameter specify the fully-qualified image name
+      and that the "subject-digest" parameter be specified. Defaults to false.
+    default: false
+    required: false
+  show-summary:
+    description: >
+      Whether to attach a list of generated attestations to the workflow run
+      summary page. Defaults to true.
+    default: true
+    required: false
+  github-token:
+    description: >
+      The GitHub token used to make authenticated API requests.
+    default: ${{ github.token }}
+    required: false
 
+outputs:
+  bundle-path:
+    description: 'The path to the file containing the attestation bundle.'
+    value: ${{ steps.attest.outputs.bundle-path }}
+  attestation-id:
+    description: 'The ID of the attestation.'
+    value: ${{ steps.attest.outputs.attestation-id }}
+  attestation-url:
+    description: 'The URL for the attestation summary.'
+    value: ${{ steps.attest.outputs.attestation-url }}
 
-jobs:
-  tests:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Set up GitHub Actions
-      uses: actions/checkout@v3
-    - name: Use Node.js 14.x
-      uses: actions/setup-node@v3
+runs:
+  using: 'composite'
+  steps:
+    - uses: actions/attest-build-provenance/predicate@36fa7d009e22618ca7cd599486979b8150596c74 # predicate@1.1.4
+      id: generate-build-provenance-predicate
+    - uses: actions/attest@v2.2.0
+      id: attest
       with:
-        node-version: 14.x
-    - name: Check if the repository is private
-      run: exit 1
-      if: ${{github.event.repository.private}}
-    - name: Get testing lib
-      run: set -eu && git clone --branch main --single-branch --depth 1 https://github.com/Yandex-Practicum/tests-selfmade-project-2-v2-public.git
-    - name: Run the tests
-      run: bash tests-selfmade-project-2-v2-public/run.sh
-    - name: Upload layout-compare
-      uses: actions/upload-artifact@v3
-      with:
-        name: layout-compare
-        path: tests-selfmade-project-2-v2-public/output.jpg
-    - name: Show test results
-      run: bash tests-selfmade-project-2-v2-public/result.sh
+        subject-path: ${{ inputs.subject-path }}
+        subject-digest: ${{ inputs.subject-digest }}
+        subject-name: ${{ inputs.subject-name }}
+        subject-checksums: ${{ inputs.subject-checksums }}
+        predicate-type: ${{ steps.generate-build-provenance-predicate.outputs.predicate-type }}
+        predicate: ${{ steps.generate-build-provenance-predicate.outputs.predicate }}
+        push-to-registry: ${{ inputs.push-to-registry }}
+        show-summary: ${{ inputs.show-summary }}
+        github-token: ${{ inputs.github-token }}
